# freqtrade_boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml  download-data.yml  pre-commit.yml  python-conda.yml  reports.yml
docker/: Dockerfile.custom
reports/: report.txt
user_data/: config.json
user_data/configs/: blacklist-binance.json  config-binance.json  config-usdt-binance.json  pairlist-static-usdt-binance.json
user_data/hyperopts/: sample_hyperopt_loss.py
user_data/strategies/: AlwaysBuy.py  lookahead_strategy.py  sample_strategy.py
user_data/test/: lookahead_test.py
user_data/tests/: conftest.py  test_btc_protection.py  test_indicator_consistency.py  test_indicator_lookahead_bias.py  test_lookahead_bias.py  test_strategy_lookahead_bias.py
