[tool.poetry]
name = "freqtrade_boilerplate"
version = "0.1.0"
description = "Boilerplate project for freqtrade strategy development and deployment"
authors = ["Alex Babescu <alex@babescu.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
